# everything-is-a-spectrogram

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  spectro_core.py
static/: main.js  style.css
templates/: index.html
