[project]
name = "everything-is-a-spectrogram"
version = "0.1.0"
description = "Everything is a spectrogram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.128.6",
    "pydantic==2.12.5",
    "uvicorn==0.40.0",
    "jinja2==3.1.6",
    "numpy==2.4.2",
    "Pillow==12.1.0",
]
